--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             const SCRIPT_EARCUT = './earcut.min.js';
             const SCRIPT_CANVASDRAWER = './canvasdrawer.min.js';
 
-            const JLOG_ZIP_FILE = urlParam('jlog')||"http://aura.ydns.eu/static/logs/robocup2020/SOS_2014_test__1601629914621_viewer_event_log.jlog.zip";
+            const JLOG_ZIP_FILE = urlParam('jlog')||"https://cdn.robocup.org/rsim/public/viewer/testlogs/SOS_2014_test__1601629914621_viewer_event_log.jlog.zip";
             const JLOG_INNER_FILE = "log.jlog";
 
             const CANVAS_ID = 'canv';
